wip: use position: fixed for input/textarea in tableeditor
so it does not increase the cell width and does not change all
the table size.
Actually, there is still a small size change as we remove the cell
content before adding the input/textarea, but more subtle than before

--- a/umap/static/umap/css/tableeditor.css
+++ b/umap/static/umap/css/tableeditor.css
@@ -70,9 +70,13 @@
 .umap-table-editor .formbox,
 .umap-table-editor input {
     margin: 0;
+    min-height: initial;
 }
-.umap-table-editor input {
+.umap-table-editor textarea,
+.umap-table-editor input[type=text] {
     border-radius: initial;
+    width: initial;
+    position: fixed;
 }
 .umap-table-editor th button {
     transform: rotate(90deg);
